# isaac_chansol

./: .gitignore  blender_box_split(yet).py  gif_maker.ipynb  main.py  pyproject.toml  readme.txt  robotiq_zhop_width_rate.json
Robot_45/: robot_configs.py  robot_policy.py
Utils/Robot_45/: Control_using_basic_ik.py  Control_using_basic_ik_bak.py  Control_using_rmpflow.py  robot_configs.py  robot_policy.py
Utils/general_utils/: cal_depth_width.py  grasp_sample_gen.py  mat_utils.py
Utils/isaac_utils_51/: USD_configurator.py  Writer_custom.py  augmentation.py  debug_tools.py  isaac_ros_utils.py  my_rep.py  rep_utils.py  sanjabu_Writer.py  scan_rep.py
camera/: command.txt  get_kinect_img.py
example/: doosan_robot_test.py  robot_inv_realtime_test.py  test_robotis.py
example/VLA_data/: Lula_RRT_RMPflow_data_collect.py  Lula_RRT_data_collect.py  (+3 more)
general_utils/: mat_utils.py
hanhwa/: doosan_cont.py  doosan_cont_traj.py  gripper_zhop_widht_cal.py  hanhwa_grasp_doosan_robotiq.py  hanhwa_grasp_doosan_robotiq_v2.py  robotiq_gripper.py  robotiq_zhop_width_rate.json
isaac_utils_45/: box_rep.py  light_set.py  rep_utils.py  sanjabu_Writer.py  scan_rep.py
isaac_utils_51/: cs_rep_utils.py  my_rep.py  rep_utils.py  scan_rep.py
ros/: isaac_ik_server_doosan_robotiq.py  isaac_ros_utils.py  ros2bridge_test.py
ros/ik_isaac_interfaces/: CMakeLists.txt  package.xml
ros/ik_isaac_interfaces/srv/: IkSolve.srv
socket/: client.py  isaac_ikclient.py  isaac_ikserver.py  server.py
socket_utils/: client.py  image_send_client.py  image_send_server.py  isaac_ikserver.py
(+327 files in other folders)
